--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,57 @@
-/* You can add global styles to this file, and also import other style files */
+
+*{
+  padding : 0px;
+  margin: 0px;
+}
+
+body{
+  width: 100%;
+  height: 100vh;
+
+}
+
+.mainTitle {
+  font-family: "Segoe UI";
+  color: #646b75;
+  font-size: 2.3em;
+  width: fit-content;
+  margin: 20px;
+}
+
+.subMainTitle {
+  font-family: "Segoe UI";
+  color: #646b75;
+  font-size: 1.5em;
+  width: fit-content;
+  margin-bottom: 30px;
+}
+
+.contentApp{
+  background-color: rgba(56, 59, 63, 0.1);
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.subContentApp{
+  margin-top: 20px;
+  width: 80%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.subSubContentApp{
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+
+
